# microbots

./: .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  STATUS.md  config.py  docker-compose.yml  idea.md  pyproject.toml  render.yaml  requirements.txt  sponsor.md
.devin/: RULES.md
.devin/plans/: e2e-eval-and-devin-rules.md
.github/: PULL_REQUEST_TEMPLATE.md
agent/: AGENTS.md  BRAINDUMP.md  DESIGN-v1.md  HANDOFF.md  PLAN-v1.md  PROGRESS.md  SKIMPLE.md  WHATSAPP.md
agent/harness/: AGENTS.md
agent/research/: README.md  agemo-agents.md  atomic-sdk.md  composio.md  kaig-martin.md  key-insights.md  pydantic-stack.md
agent/scratchpad/: AGENTS.md
app/: .dockerignore  Dockerfile  deploy.py  main.py  requirements.txt
app/mcp/: __init__.py  devin_server.py  devin_tools.py  queries.py  server.py  tools.py
app/routes/: __init__.py  api_composio.py  api_devin.py  api_health.py  api_kg.py  api_logfire.py
app/services/: composio.py  devin.py  devin_poller.py  kg_writes.py  surreal.py
app/tests/: test_chat_persistence.py  test_devin_mcp_imports.py  test_devin_service.py  test_kg_api_e2e.py
db/: __init__.py  client.py  models.py  queries.py
docs/: agent-harness-integration.md  api-reference.md  elevenlabs-system-prompt.md  feature.md  kg-frontend-contract.md  logfire-dashboard.md  logfire-demo-script.md  logging.md  triage-2026-04-26-ui-harness-sync.md  ui_iteration_brief_v1.md  ui_scope_v1.md
enrich/: context.py  entity_resolver.py  llm.py  memory_extractor.py  skill_detector.py  workflow_composer.py
enrich/prompts/: entity.py
enrich/writers/: entity_writer.py  memory_writer.py  skill_writer.py  workflow_writer.py
ingest/: __main__.py  db.py  llm.py
ingest/prompts/: core.py  github.py  linear.py
ingest/pullers/: gmail.py  linear.py  notion.py  slack.py
ingest/writers/: chat_records.py
knowledge_graph/: config.py
knowledge_graph/candidates/: scrub.py  snapshot.py  (+1 more)
memory/: user.md
microbots/: AGENTS.md  __init__.py  digest.py  llm_tagger.py  log.py  observability.py  tagger.py
render_sdk/: .env.example  README.md  __init__.py  agent.md  cli.py  docker_builder.py  exceptions.py  log_drain.py  models.py  pyproject.toml  registry.py  render_api.py  sdk.py  test_case.md  utils.py  validator.py
render_sdk/tests/: test_docker_builder.py  test_registry.py  test_render_api.py  test_sdk_integration.py  test_validator.py
schema/: 00_setup.surql  01_nodes.surql  02_relations.surql  03_indexes.surql  apply.py
seed/: seed.py
test/: README.md  deploy_fastapi_demo.py  seed_demo_traces.py  test_logging.py  test_observability.py  verify_logfire_e2e.py
tests/: MIGRATION.md  conftest.py
web/: .env.example  .gitignore  README.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
wiki/: agent.py  deps.py  orchestrator.py  targets.py  tools.py
(+476 files in other folders)
