[project]
name = "microbots"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "surrealdb>=1.0.0",
    "python-dotenv>=1.0.0",
    "logfire>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["microbots"]
