[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "render-sdk"
version = "1.0.0"
description = "Automated local-path to Render.com deployment SDK"
requires-python = ">=3.11"
dependencies = [
    "docker>=7.0",
    "requests>=2.31",
    "portalocker>=2.8",
    "python-dotenv>=1.0",
    "pyngrok>=7.0",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "responses>=0.25",
    "pytest-cov>=5.0",
]

[project.scripts]
render-sdk = "render_sdk.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["render_sdk*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
